force-app/main/default/objects/SC_Score_Card__c/SC_Score_Card__c.object-meta.xml
<CustomObject>
    <description>STARTER COMPANY PROGRAM - Business Plan and Financials Score Card (RGA)</description>
    <label>SC Score Card</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Score Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Score Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>