force-app/main/default/objects/SC_Score_Card__c/fields/All_operating_costs_are_identified__c.field-meta.xml
<CustomField>
    <fullName>All_operating_costs_are_identified__c</fullName>
    <description>All operating costs including grant, loan payments, salaries, utilities have been identified and are included in the disbursements</description>
    <inlineHelpText>All operating costs including grant, loan payments, salaries, utilities have been identified and are included in the disbursements</inlineHelpText>
    <label>All operating costs are identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>