force-app/main/default/objects/SC_Score_Card__c/fields/Assets_required_for_business_identified__c.field-meta.xml
<CustomField>
    <fullName>Assets_required_for_business_identified__c</fullName>
    <description>All assets required for operating the business have been identified</description>
    <inlineHelpText>All assets required for operating the business have been identified</inlineHelpText>
    <label>Assets required for business identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>