force-app/main/default/objects/SC_Score_Card__c/fields/Assumptions_are_clearly_identified__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_are_clearly_identified__c</fullName>
    <description>Assumptions are clearly identified based on information provided in the company outline, operating plan, and marketing plan</description>
    <inlineHelpText>Assumptions are clearly identified based on information provided in the company outline, operating plan, and marketing plan</inlineHelpText>
    <label>Assumptions are clearly identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>