force-app/main/default/objects/SC_Score_Card__c/fields/Business_has_CRM_System__c.field-meta.xml
<CustomField>
    <fullName>Business_has_CRM_System__c</fullName>
    <label>Business has CRM System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>