force-app/main/default/objects/SC_Score_Card__c/fields/Business_has_Customer_Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Business_has_Customer_Loyalty_Program__c</fullName>
    <label>Business has Customer Loyalty Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>