force-app/main/default/objects/SC_Score_Card__c/fields/Business_Name1__c.field-meta.xml
<CustomField>
    <fullName>Business_Name1__c</fullName>
    <formula>Financial_Incentive_Starter_Company__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>