force-app/main/default/objects/SC_Score_Card__c/fields/Business_Objectives_clearly_identified__c.field-meta.xml
<CustomField>
    <fullName>Business_Objectives_clearly_identified__c</fullName>
    <description>The goals and objectives of the business are clearly identified</description>
    <inlineHelpText>The goals and objectives of the business are clearly identified</inlineHelpText>
    <label>Business Objectives clearly identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>