force-app/main/default/objects/SC_Score_Card__c/fields/Business_Plan_identify_SWOT_of_venture__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan_identify_SWOT_of_venture__c</fullName>
    <description>The Business Plan identifies the Strengths, Weaknesses, Opportunities  and Threats to Success (SWOT) of the venture</description>
    <inlineHelpText>The Business Plan identifies the Strengths, Weaknesses, Opportunities  and Threats to Success (SWOT) of the venture</inlineHelpText>
    <label>Business Plan identify (SWOT) of venture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (3 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>