force-app/main/default/objects/SC_Score_Card__c/fields/Cash_Flow_projections_are_included__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_projections_are_included__c</fullName>
    <description>Cash Flow projections are included indicating adequate funding is  in place to acquire all assets, fund other start-up costs and to provide operating funding until revenues can cover all operating costs</description>
    <inlineHelpText>Cash Flow projections are included indicating adequate funding is  in place to acquire all assets, fund other start-up costs and to provide operating funding until revenues can cover all operating costs</inlineHelpText>
    <label>Cash Flow projections are included?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (3 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>