force-app/main/default/objects/SC_Score_Card__c/fields/Company_has_goods_to_supply_product__c.field-meta.xml
<CustomField>
    <fullName>Company_has_goods_to_supply_product__c</fullName>
    <description>The company can consistently acquire goods to supply the product/service at an acceptable price and quality</description>
    <inlineHelpText>The company can consistently acquire goods to supply the product/service at an acceptable price and quality</inlineHelpText>
    <label>Company has goods to supply product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>