force-app/main/default/objects/SC_Score_Card__c/fields/Corporate_Objective_Early_Identified__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Objective_Early_Identified__c</fullName>
    <label>Corporate Objective Early Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>