force-app/main/default/objects/SC_Score_Card__c/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <label>Customer Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>