force-app/main/default/objects/SC_Score_Card__c/fields/Degree_of_Management_Sales_Experience__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Management_Sales_Experience__c</fullName>
    <description>Degree of Management experience in the Industry (including sales):</description>
    <inlineHelpText>Degree of Management experience in the Industry (including sales):</inlineHelpText>
    <label>Degree of Management &amp; Sales Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5+ years (3 pts)</fullName>
            </value>
            <value>
                <fullName>3+ years (2 pts)</fullName>
            </value>
            <value>
                <fullName>Less than 3 years (1 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>