force-app/main/default/objects/SC_Score_Card__c/fields/Demonstrated_personal_investment_of_cash__c.field-meta.xml
<CustomField>
    <fullName>Demonstrated_personal_investment_of_cash__c</fullName>
    <description>Demonstrated personal investment of cash or in kind</description>
    <inlineHelpText>Demonstrated personal investment of cash or in kind</inlineHelpText>
    <label>Demonstrated personal investment of cash</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>