force-app/main/default/objects/SC_Score_Card__c/fields/Details_a_realistic_marketing_plan__c.field-meta.xml
<CustomField>
    <fullName>Details_a_realistic_marketing_plan__c</fullName>
    <description>Details a realistic marketing plan that aggressively introduces the product/service to the target market (based on sound market research)</description>
    <inlineHelpText>Details a realistic marketing plan that aggressively introduces the product/service to the target market (based on sound market research)</inlineHelpText>
    <label>Details a realistic marketing plan?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (5 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>