force-app/main/default/objects/SC_Score_Card__c/fields/Differentiation_from_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Differentiation_from_Competitors__c</fullName>
    <label>Differentiation from Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>