force-app/main/default/objects/SC_Score_Card__c/fields/Financial_Incentive_Starter_Company__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive_Starter_Company__c</fullName>
    <label>Financial Incentive Starter Company</label>
    <referenceTo>Financial_Incentive__c</referenceTo>
    <relationshipLabel>SC Score Cards</relationshipLabel>
    <relationshipName>SC_Score_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>