force-app/main/default/objects/SC_Score_Card__c/fields/Full_cost_bringing_the_product_to_market__c.field-meta.xml
<CustomField>
    <fullName>Full_cost_bringing_the_product_to_market__c</fullName>
    <description>Full cost of bringing the product/service to market has been identified. This includes production processes and the means of delivery</description>
    <inlineHelpText>Full cost of bringing the product/service to market has been identified. This includes production processes and the means of delivery</inlineHelpText>
    <label>Full cost bringing the product to market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>