force-app/main/default/objects/SC_Score_Card__c/fields/Geographical_service_area_clearly_Identi__c.field-meta.xml
<CustomField>
    <fullName>Geographical_service_area_clearly_Identi__c</fullName>
    <description>The geographical service area are clearly identified?</description>
    <inlineHelpText>The geographical service area are clearly identified?</inlineHelpText>
    <label>Geographical area clearly Identified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>