force-app/main/default/objects/SC_Score_Card__c/fields/Grant_fund_Allocation_clearly_outline_fp__c.field-meta.xml
<CustomField>
    <fullName>Grant_fund_Allocation_clearly_outline_fp__c</fullName>
    <description>Grant fund Allocation is clearly outlined</description>
    <inlineHelpText>Grant fund Allocation is clearly outlined</inlineHelpText>
    <label>Grant fund Allocation is clearly outline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (1 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>