force-app/main/default/objects/SC_Score_Card__c/fields/Grant_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reviewer__c</fullName>
    <label>Grant Reviewer(Name/Email)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abdullah Snobar (asnobar@ryerson.ca)</fullName>
            </value>
            <value>
                <fullName>Andrew Patricio (andrew@bizlaunch.ca)</fullName>
            </value>
            <value>
                <fullName>Dave Sora (dsora@sseontario.org)</fullName>
            </value>
            <value>
                <fullName>David Cohen (dcohen@smallbusinessbigideas.com)</fullName>
            </value>
            <value>
                <fullName>Marissa Maislin (marissa@theshoptoronto.ca)</fullName>
            </value>
            <value>
                <fullName>Marlene Latour (marlene.latour@gmail.com)</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis (skoitsi@toronto.ca)</fullName>
            </value>
            <value>
                <fullName>Vik Jain (jain@toronto.ca)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>