force-app/main/default/objects/SC_Score_Card__c/fields/Grant_Reviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reviewer_Email__c</fullName>
    <formula>IF(TEXT(Grant_Reviewer_Name__c) = &#39;Vikas Jain&#39;,&#39;jain@toronto.ca&#39;,
			IF(TEXT(Grant_Reviewer_Name__c) =&#39;Sandi Koitsis-Zigomanis&#39;,&#39;skoitsi@toronto.ca&#39;,
						IF(TEXT(Grant_Reviewer_Name__c) =&#39;Marcie Wenn&#39;,&#39;mwenn@retailcouncil.org&#39;,
IF(TEXT(Grant_Reviewer_Name__c) =&#39;Andrew Patricio&#39;,&#39;andrew@bizlaunch.com&#39;,
									&#39;&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Reviewer Email</label>
    <type>Text</type>
</CustomField>