force-app/main/default/objects/SC_Score_Card__c/fields/Grant_Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reviewer_Name__c</fullName>
    <label>Grant Reviewer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Marcie Wenn</fullName>
            </value>
            <value>
                <fullName>Andrew Patricio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>