force-app/main/default/objects/SC_Score_Card__c/fields/Hiring_Practices_are_clearly_Identified__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Practices_are_clearly_Identified__c</fullName>
    <label>Hiring Practices are clearly Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>