force-app/main/default/objects/SC_Score_Card__c/fields/Identify_and_responding_to_Gaps_are_clea__c.field-meta.xml
<CustomField>
    <fullName>Identify_and_responding_to_Gaps_are_clea__c</fullName>
    <label>Identify and Responding to Gaps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>