force-app/main/default/objects/SC_Score_Card__c/fields/Industry_Network__c.field-meta.xml
<CustomField>
    <fullName>Industry_Network__c</fullName>
    <description>Industry_Network</description>
    <inlineHelpText>Industry_Network</inlineHelpText>
    <label>Industry Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Well Established (2 pts)</fullName>
            </value>
            <value>
                <fullName>Some contacts/active member in industry association (1 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>