force-app/main/default/objects/SC_Score_Card__c/fields/Level_of_Education_Business_Start_Up__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education_Business_Start_Up__c</fullName>
    <description>Level of Education related to Business Start-Up Field:</description>
    <inlineHelpText>Level of Education related to Business Start-Up Field:</inlineHelpText>
    <label>Level of Education for Business Start-Up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OSSD or equivilent (1pt)</fullName>
            </value>
            <value>
                <fullName>Post Secondary or Trade unrelated (2pts)</fullName>
            </value>
            <value>
                <fullName>Post Secondary or Trade related (3pts)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>