force-app/main/default/objects/SC_Score_Card__c/fields/Management_has_been_profiled__c.field-meta.xml
<CustomField>
    <fullName>Management_has_been_profiled__c</fullName>
    <label>Management has been profiled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>