force-app/main/default/objects/SC_Score_Card__c/fields/Name_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Applicant__c</fullName>
    <formula>Financial_Incentive_Starter_Company__r.Contact__r.FirstName &amp; &#39; &#39; &amp; Financial_Incentive_Starter_Company__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Applicant</label>
    <type>Text</type>
</CustomField>