force-app/main/default/objects/SC_Score_Card__c/fields/Operating_processes_are_described__c.field-meta.xml
<CustomField>
    <fullName>Operating_processes_are_described__c</fullName>
    <description>Operating processes are described</description>
    <inlineHelpText>Operating processes are described</inlineHelpText>
    <label>Operating processes are described?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2 pt)</fullName>
            </value>
            <value>
                <fullName>No (0 pt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>