force-app/main/default/objects/SC_Score_Card__c/fields/Performance_Management_Process_in_place__c.field-meta.xml
<CustomField>
    <fullName>Performance_Management_Process_in_place__c</fullName>
    <label>Performance Management Process in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>