force-app/main/default/objects/SC_Score_Card__c/fields/Performing_Market_Research__c.field-meta.xml
<CustomField>
    <fullName>Performing_Market_Research__c</fullName>
    <label>Performing Market Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>