force-app/main/default/objects/SC_Score_Card__c/fields/Points_All_Operating_Cost__c.field-meta.xml
<CustomField>
    <fullName>Points_All_Operating_Cost__c</fullName>
    <description>Points_Awarded_All_Operating_Cost</description>
    <label>Points Awarded-All Operating Cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>