force-app/main/default/objects/SC_Score_Card__c/fields/Points_Appropriate_pricing__c.field-meta.xml
<CustomField>
    <fullName>Points_Appropriate_pricing__c</fullName>
    <label>Points Awarded-Appropriate Pricing</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>