force-app/main/default/objects/SC_Score_Card__c/fields/Points_Assets_required__c.field-meta.xml
<CustomField>
    <fullName>Points_Assets_required__c</fullName>
    <description>Points_Awarded_Assets_requiredPoints_Awarded_Assets_required</description>
    <label>Points Awarded-Assets Required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>