force-app/main/default/objects/SC_Score_Card__c/fields/Points_Assumptions_identified__c.field-meta.xml
<CustomField>
    <fullName>Points_Assumptions_identified__c</fullName>
    <description>Points_Awarded_Assumptions_identified</description>
    <label>Points Awarded-Assumptions Identified</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>