force-app/main/default/objects/SC_Score_Card__c/fields/Points_Awarded_Customer_Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded_Customer_Loyalty_Program__c</fullName>
    <label>Points Awarded- Customer Loyalty Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>