force-app/main/default/objects/SC_Score_Card__c/fields/Points_Awarded_Hiring_Practices__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded_Hiring_Practices__c</fullName>
    <label>Points Awarded- Hiring Practices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>