force-app/main/default/objects/SC_Score_Card__c/fields/Points_Awarded_Management_Profiled__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded_Management_Profiled__c</fullName>
    <label>Points Awarded - Management Profiled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>