force-app/main/default/objects/SC_Score_Card__c/fields/Points_Awarded_Tracking_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded_Tracking_Inventory__c</fullName>
    <label>Points Awarded- Tracking Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>