force-app/main/default/objects/SC_Score_Card__c/fields/Points_Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Points_Business_Objective__c</fullName>
    <label>Points Awarded-Business_Objective</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>