force-app/main/default/objects/SC_Score_Card__c/fields/Points_Business_Plan_SWOT__c.field-meta.xml
<CustomField>
    <fullName>Points_Business_Plan_SWOT__c</fullName>
    <description>Points_Awarded_Busin</description>
    <label>Points Awarded-Business Plan SWOT</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>