force-app/main/default/objects/SC_Score_Card__c/fields/Points_Cash_Flow_projections__c.field-meta.xml
<CustomField>
    <fullName>Points_Cash_Flow_projections__c</fullName>
    <label>Points Awarded-Cash Flow Projections</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>