force-app/main/default/objects/SC_Score_Card__c/fields/Points_Company_has_good__c.field-meta.xml
<CustomField>
    <fullName>Points_Company_has_good__c</fullName>
    <description>Points_Awarded_Company_has_good</description>
    <label>Points Awarded-Company has good</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>