force-app/main/default/objects/SC_Score_Card__c/fields/Points_Degree_Management__c.field-meta.xml
<CustomField>
    <fullName>Points_Degree_Management__c</fullName>
    <description>Degree_Management</description>
    <label>Points Awarded-Degree Management</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>