force-app/main/default/objects/SC_Score_Card__c/fields/Points_Demonstrated_personal__c.field-meta.xml
<CustomField>
    <fullName>Points_Demonstrated_personal__c</fullName>
    <description>Points</description>
    <label>Points Awarded-Demonstrated Personal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>