force-app/main/default/objects/SC_Score_Card__c/fields/Points_Details_realistic_plan__c.field-meta.xml
<CustomField>
    <fullName>Points_Details_realistic_plan__c</fullName>
    <description>Points_Awarded_Details_realistic_plan</description>
    <label>Points Awarded-Details Realistic Plan</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>