force-app/main/default/objects/SC_Score_Card__c/fields/Points_Full_cost_product__c.field-meta.xml
<CustomField>
    <fullName>Points_Full_cost_product__c</fullName>
    <label>Points Awarded-Full Cost Product</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>