force-app/main/default/objects/SC_Score_Card__c/fields/Points_Geographical_Area__c.field-meta.xml
<CustomField>
    <fullName>Points_Geographical_Area__c</fullName>
    <label>Points Awarded- Geographical Area</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>