force-app/main/default/objects/SC_Score_Card__c/fields/Points_Grant_Allocation_FP__c.field-meta.xml
<CustomField>
    <fullName>Points_Grant_Allocation_FP__c</fullName>
    <label>Points Awarded-Grant Allocation FP</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>