force-app/main/default/objects/SC_Score_Card__c/fields/Points_Industry_Network__c.field-meta.xml
<CustomField>
    <fullName>Points_Industry_Network__c</fullName>
    <label>Points Awarded-Industry Network</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>