force-app/main/default/objects/SC_Score_Card__c/fields/Points_Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Points_Level_of_Education__c</fullName>
    <label>Points Awarded-Level of Education</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>