force-app/main/default/objects/SC_Score_Card__c/fields/Points_Operating_Process__c.field-meta.xml
<CustomField>
    <fullName>Points_Operating_Process__c</fullName>
    <description>Points_Awarded_Operating_Process</description>
    <label>Points Awarded-Operating Process</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>