force-app/main/default/objects/SC_Score_Card__c/fields/Points_Practical_Experience__c.field-meta.xml
<CustomField>
    <fullName>Points_Practical_Experience__c</fullName>
    <label>Points Awarded-Practical Experience</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>