force-app/main/default/objects/SC_Score_Card__c/fields/Points_Risk_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Points_Risk_Analysis__c</fullName>
    <description>Points_Awarded_Risk_Analysis</description>
    <label>Points Awarded-Risk Analysis</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>