force-app/main/default/objects/SC_Score_Card__c/fields/Points_Sales_Revenue_projections__c.field-meta.xml
<CustomField>
    <fullName>Points_Sales_Revenue_projections__c</fullName>
    <description>Points_Awarded_Sales_Revenue_projections</description>
    <label>Points Awarded-Sales Revenue projections</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>