force-app/main/default/objects/SC_Score_Card__c/fields/Points_Speed_Closing_Sales__c.field-meta.xml
<CustomField>
    <fullName>Points_Speed_Closing_Sales__c</fullName>
    <description>Points_Awarded_Speed_Closing_Sales</description>
    <label>Points Awarded-Speed Closing Sales</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>