force-app/main/default/objects/SC_Score_Card__c/fields/Points_Target_market__c.field-meta.xml
<CustomField>
    <fullName>Points_Target_market__c</fullName>
    <label>Points Awarded-Target market</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>