force-app/main/default/objects/SC_Score_Card__c/fields/Points_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Points_Value_Proposition__c</fullName>
    <label>Points Awarded- Value Proposition</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>